2021-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (WriteMSLImage): Add OpenBlob()/CloseBlob() which
        seems necessary to avoid memory leak in ImageToBlob().  Hopefully
        will fix oss-fuzz 32575 "graphicsmagick:coder_MSL_fuzzer:
        Direct-leak in MagickMalloc".

2021-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (RegisterJP2Image): Report JasPer library version.

        * coders/msl.c (ProcessMSLScript): Free msl_image upon reader
        failure.  Should fix oss-fuzz 32479
        "graphicsmagick:coder_MSL_fuzzer: Indirect-leak in MagickMalloc".

2021-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * PerlMagick/Makefile.am (check-perl): Nullify the check-perl
        target when PerlMagick is enabled and shared libraries are used.
        This is because a dynamic GraphicsMagick needs to be formally
        installed before PerlMagick can be tested.

        * coders/jp2.c (ReadJP2Image): Support both old and new ways to
        determine if JasPer codec support is available.

        * coders/msl.c (ProcessMSLScript): Another attempt to properly fix
        oss-fuzz 32263 "graphicsmagick:coder_MSL_fuzzer:
        Heap-use-after-free in ProcessMSLScript" without causing new
        problems.

2021-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Fix oss-fuzz 32263
        "graphicsmagick:coder_MSL_fuzzer: Heap-use-after-free in
        ProcessMSLScript".

2021-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Magick++/lib/Image.cpp (Magick::Image::write): Due to the design
        of ImageToBlob(), it is possible for data to be returned although
        an exception was thrown.  Deposit it in the Blob so that it will
        be freed.  May finish fixing oss-fuzz 31965
        "graphicsmagick:coder_MSL_fuzzer: Indirect-leak in MagickMalloc".

2021-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
