@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210329"
-#define public MagickPackageReleaseDate "snapshot-20210329"
+#define public MagickPackageVersionAddendum ".020210401"
+#define public MagickPackageReleaseDate "snapshot-20210401"
