@@ -1494,7 +1494,7 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
     text;
 
   png_bytep
-     ping_trans_alpha;
+     ping_trans_alpha = (png_bytep) NULL;
 
   size_t
     length,
@@ -1518,8 +1518,8 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
     transparent_color;
 
   png_color_16p
-     ping_background,
-     ping_trans_color;
+     ping_background = (png_color_16p) NULL,
+     ping_trans_color = (png_color_16p) NULL;
 
   png_uint_32
     ping_width,
@@ -2113,7 +2113,8 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
     }
 #endif
 
-  if (png_get_valid(ping, ping_info, PNG_INFO_tRNS))
+  if (png_get_valid(ping, ping_info, PNG_INFO_tRNS) &&
+      (ping_trans_color != (png_color_16p) NULL))
     {
       int
         bit_mask;
