@@ -35,6 +35,12 @@
 <div class="document">
 
 
+<p>2021-04-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/png.c (ReadOnePNGImage): Avoid use of null
+ping_trans_color.  Fixes oss-fuzz 32666
+&quot;graphicsmagick:coder_MNG_fuzzer: Null-dereference READ in
+ReadOnePNGImage&quot;.</blockquote>
 <p>2021-03-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * coders/msl.c (WriteMSLImage): Add OpenBlob()/CloseBlob() which
