@@ -1,3 +1,10 @@
+2021-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/png.c (ReadOnePNGImage): Avoid use of null
+        ping_trans_color.  Fixes oss-fuzz 32666
+        "graphicsmagick:coder_MNG_fuzzer: Null-dereference READ in
+        ReadOnePNGImage".
+
 2021-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/msl.c (WriteMSLImage): Add OpenBlob()/CloseBlob() which
